# recoll

./: ChangeLog  Changelog.md  INSTALL  Makefile.am  Makefile.in  README  README.md  configure.ac  recoll_1.26.3-1build1.debian.tar.xz  recoll_1.26.3-1build1.dsc  recoll_1.26.3.orig.tar.gz.asc
aspell/: rclaspell.cpp  (+1 more)
recoll-1.26.3/: COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.ac
recoll-1.26.3/.pc/add-korean-lang/qtgui/: recoll.pro.in
recoll-1.26.3/.pc/blhc.diff/qtgui/: recoll.pro.in
recoll-1.26.3/aspell/: aspell-local.h  rclaspell.cpp  rclaspell.h
recoll-1.26.3/bincimapmime/: 00README.recoll  AUTHORS  COPYING  convert.h  mime-inputsource.h  mime-parsefull.cc  mime-parseonlyheader.cc  mime-printbody.cc  mime-utils.h  mime.cc  mime.h
recoll-1.26.3/common/: autoconfig.h.in  conf_post.h  cstr.cpp  cstr.h  rclconfig.cpp  rclconfig.h  rclinit.cpp  syngroups.cpp  syngroups.h  textsplit.cpp  textsplit.h  unacpp.cpp  unacpp.h  uproplist.h  utf8fn.cpp  webstore.cpp  webstore.h
recoll-1.26.3/debian/: README.Debian  changelog  copyright  python3-recoll.install  recollcmd.lintian-overrides  recollcmd.manpages  rules  watch
recoll-1.26.3/debian/patches/: add-korean-lang  blhc.diff  fix-miss-korean-tsfile  series
recoll-1.26.3/debian/source/: include-binaries
recoll-1.26.3/debian/upstream/: signing-key.asc
recoll-1.26.3/desktop/: hotrecoll.py  recoll-searchgui.desktop  recoll.appdata.xml  recoll.xcf  recoll_index_on_ac.sh
recoll-1.26.3/doc/man/: recoll.conf.5  recollindex.1  recollq.1  xadump.1
recoll-1.26.3/doc/prog/: Makefile  top.txt
recoll-1.26.3/doc/user/: docbook-xsl.css  recoll.conf.xml  usermanual.html  usermanual.xml
recoll-1.26.3/filters/: fb2.xsl  gnumeric.xsl  injectcommon.sh  okular-note.xsl  opendoc-meta.xsl  openxml-meta.xsl  openxml-word-body.xsl  openxml-xls-body.xsl  ppt-dump.py  rcl7z  rclabw.py  rclaptosidman  rclaudio  rclbasehandler.py  rclbibtex.sh  rclcheckneedretry.sh  rclchm  rcldia  rcldjvu.py  rcldoc.py  rcldvi  rclepub  rclepub1  rclexec1.py  rclexecm.py  rclfb2.py  rclgnm.py  rclics  rclimg.py  rclinfo  rclkar  rclkwd  rcllatinclass.py  rclmidi.py  rclokulnote.py  rclopxml.py  rclpdf.py  rclppt.py  rclps  rclpst.py  (+23 more)
recoll-1.26.3/index/: checkretryfailed.cpp  checkretryfailed.h  exefetcher.cpp  exefetcher.h  fetcher.cpp  fetcher.h  fsfetcher.cpp  fsfetcher.h  fsindexer.cpp  fsindexer.h  idxstatus.cpp  idxstatus.h  indexer.cpp  indexer.h  mimetype.cpp  mimetype.h  rclmon.h  rclmonprc.cpp  rclmonrcv.cpp  recollindex.cpp  subtreelist.cpp  subtreelist.h  webqueue.cpp  webqueue.h  webqueuefetcher.cpp  webqueuefetcher.h
recoll-1.26.3/internfile/: extrameta.cpp  extrameta.h  htmlparse.cpp  htmlparse.h  indextext.h  internfile.cpp  internfile.h  mh_exec.cpp  mh_exec.h  mh_execm.cpp  mh_execm.h  mh_html.cpp  mh_html.h  mh_mail.cpp  mh_mbox.cpp  mh_null.h  mh_symlink.h  mh_text.cpp  mh_text.h  mh_unknown.h  mh_xslt.cpp  mimehandler.cpp  mimehandler.h  myhtmlparse.cpp  myhtmlparse.h  txtdcode.cpp  uncomp.cpp  uncomp.h
recoll-1.26.3/python/pychm/: AUTHORS  README-RECOLL.txt  setup.py.in
recoll-1.26.3/python/recoll/: Makefile  pyrclextract.cpp  pyrecoll.cpp  pyrecoll.h  setup.py.in
recoll-1.26.3/python/samples/: docdups.py  mutt-recoll.py  rcldlkp.py  recollq.py  recollqsd.py
recoll-1.26.3/qtgui/: Makefile  advsearch_w.cpp  advsearch_w.h  advshist.cpp  crontool.cpp  crontool.h  firstidx.h  fragbuts.cpp  fragbuts.h  guiutils.cpp  guiutils.h  idxsched.h  main.cpp  multisave.cpp  multisave.h  preview_load.cpp  preview_load.h  preview_plaintorich.cpp  preview_w.cpp  preview_w.h  ptrans.ui  ptrans_w.cpp  ptrans_w.h  rclhelp.cpp  rclhelp.h  rclm_idx.cpp  rclm_preview.cpp  rclm_saveload.cpp  rclm_view.cpp  rclm_wins.cpp  rclmain.ui  rclmain_w.cpp  rclmain_w.h  rclzg.cpp  recoll.h  recoll.pro  recoll.pro.in  recoll.qrc  reslist.cpp  reslist.h  (+32 more)
recoll-1.26.3/qtgui/confgui/: confgui.cpp  confguiindex.cpp  confguiindex.h
recoll-1.26.3/qtgui/i18n/: recoll_cs.qm  recoll_cs.ts  recoll_da.qm  recoll_da.ts  recoll_de.qm  recoll_de.ts  recoll_el.qm  recoll_el.ts  recoll_es.qm  recoll_es.ts  recoll_fr.qm  recoll_fr.ts  recoll_hu.ts  recoll_it.qm  recoll_it.ts  recoll_ko.qm  recoll_ko.ts  recoll_lt.qm  recoll_lt.ts  recoll_nl.ts  recoll_pl.ts  recoll_ru.qm  recoll_ru.ts  recoll_tr.qm  recoll_tr.ts  recoll_uk.qm  recoll_uk.ts  recoll_xx.ts  recoll_zh.qm  recoll_zh.ts  recoll_zh_CN.qm  recoll_zh_CN.ts
recoll-1.26.3/qtgui/mtpics/: License_sidux.txt
recoll-1.26.3/qtgui/widgets/: editdialog.h  editdialog.ui  listdialog.h  listdialog.ui  qxtglobal.h
recoll-1.26.3/query/: docseq.cpp  docseq.h  docseqdb.cpp  docseqdb.h  docseqdocs.h  docseqhist.cpp  docseqhist.h  dynconf.cpp  dynconf.h  filtseq.cpp  filtseq.h  plaintorich.cpp  plaintorich.h  recollq.cpp  recollq.h  recollqmain.cpp  reslistpager.cpp  reslistpager.h  sortseq.cpp  sortseq.h  wasaparse.cpp  wasaparse.ypp  wasaparseaux.cpp  wasaparserdriver.h  wasatorcl.h  xadump.cpp
recoll-1.26.3/rcldb/: daterange.cpp  daterange.h  expansiondbs.cpp  expansiondbs.h  rclabsfromtext.cpp  rclabstract.cpp  rcldb.cpp  rcldb.h  rcldb_p.h  rcldoc.cpp  rcldoc.h  rcldups.cpp  rclquery.cpp  rclquery.h  rclquery_p.h  rclterms.cpp  searchdata.cpp  searchdata.h  searchdatatox.cpp  searchdataxml.cpp  stemdb.cpp  stemdb.h  stoplist.cpp  stoplist.h  synfamily.cpp  synfamily.h  termproc.h  xmacros.h
recoll-1.26.3/sampleconf/: fields  fragbuts.xml  mimeconf  mimemap  mimeview  recoll.conf
recoll-1.26.3/testmains/: Makefile.am
recoll-1.26.3/unac/: AUTHORS  README.recoll  unac.c  unac.h
recoll-1.26.3/utils/: appformime.cpp  base64.cpp  base64.h  cancelcheck.cpp  cancelcheck.h  chrono.cpp  chrono.h  circache.cpp  circache.h  closefrom.cpp  conftree.cpp  conftree.h  copyfile.cpp  copyfile.h  cpuconf.cpp  cpuconf.h  dlib.cpp  dlib.h  ecrontab.cpp  ecrontab.h  execmd.cpp  execmd.h  fileudi.cpp  fileudi.h  fstreewalk.cpp  fstreewalk.h  hldata.h  idfile.cpp  idfile.h  listmem.h  log.cpp  log.h  md5.cpp  md5.h  md5ut.cpp  mimeparse.cpp  mimeparse.h  miniz.cpp  miniz.h  netcon.cpp  (+21 more)
recoll-1.26.3/xaposix/: safeunistd.h
(+492 files in other folders)
